--- a/app/frontend/scss/foundation/_reset.scss
+++ b/app/frontend/scss/foundation/_reset.scss
@@ -1,5 +1,12 @@
+html {
+  font-family: 'Avenir', 'Helvetica Neue', 'Helvetica', 'Arial', 'Hiragino Sans', 'ヒラギノ角ゴシック', YuGothic, 'Yu Gothic', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS PGothic';
+  font-size: 62.5%;
+}
+
 body {
-  font-family: 'Avenir', 'Helvetica Neue', 'Helvetica', 'Arial', 'Hiragino Sans', 'ヒラギノ角ゴシック', YuGothic, 'Yu Gothic', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS PGothic'
+  font-size: 1.6rem;
+  line-height: 1.4;
+  background: $background_color;
 }
 
 p {
@@ -10,8 +17,4 @@ p {
 ul,
 ol {
   list-style: none;
-}
-
-body {
-  background: $background_color;
 }
