--- a/app/frontend/scss/object/project/_article_card.scss
+++ b/app/frontend/scss/object/project/_article_card.scss
@@ -3,8 +3,8 @@
   border: 2px solid $black_color;
   border-radius: 3px;
   padding: 1rem;
-  min-width: 450px;
-  max-width: fit-content;
+  // min-width: 450px;
+  // max-width: fit-content;
 
   &__body {
     display: block;
