--- a/app/frontend/scss/object/project/_comment_item.scss
+++ b/app/frontend/scss/object/project/_comment_item.scss
@@ -1,7 +1,6 @@
 .p-comment-item {
   width: 100%;
-  padding: 1em;
-  border-bottom: 1px solid $general_line_color;
+  padding: 1rem;
 
   &__header {
     display: flex;
