--- a/app/frontend/scss/object/component/_errors.scss
+++ b/app/frontend/scss/object/component/_errors.scss
@@ -3,13 +3,13 @@
   border: 2px solid $danger_color;
   border-radius: 3px;
   text-align: left;
-  padding: 1rem;
+  padding: 1em;
 
   &__item {
     color: $danger_color;
 
     &:not(:last-child) {
-      margin-bottom: .5rem;
+      margin-bottom: .5em;
     }
   }
 }
