--- a/app/frontend/scss/object/project/_comment_item.scss
+++ b/app/frontend/scss/object/project/_comment_item.scss
@@ -1,6 +1,6 @@
 .p-comment-item {
   width: 100%;
-  padding: 1rem;
+  padding: 1em;
 
   &__header {
     display: flex;
@@ -14,12 +14,12 @@
   }
 
   &__user-name {
-    font-size: 1.2rem;
+    font-size: 1.2em;
     font-weight: 700;
   }
 
   &__body {
-    font-size: 1.6rem;
+    font-size: 1.6em;
     margin-bottom: 1em;
   }
 
