--- a/app/frontend/scss/object/utility/_shadow.scss
+++ b/app/frontend/scss/object/utility/_shadow.scss
@@ -1,4 +1,4 @@
 .u-shadow {
   // box-shadow: 3px 3px 10px $float_shadow_color;
-  box-shadow: 0 0.5rem 1rem $float_shadow_color;
+  box-shadow: 0 0.5em 1em $float_shadow_color;
 }
