--- a/app/frontend/scss/foundation/_variables.scss
+++ b/app/frontend/scss/foundation/_variables.scss
@@ -50,11 +50,11 @@ $float_shadow_color: rgba(0, 0, 0, 0.15);
 ================================*/
 
 $spacers: (0: 0,
-  1: .25rem,
-  2: .5rem,
-  3: 1rem,
-  4: 1.5rem,
-  5: 3rem);
+  1: .25em,
+  2: .5em,
+  3: 1em,
+  4: 1.5em,
+  5: 3em);
 
 /*===============================
 	flexレイアウト用変数
