--- a/app/frontend/scss/foundation/mixin/_contents_box.scss
+++ b/app/frontend/scss/foundation/mixin/_contents_box.scss
@@ -2,11 +2,11 @@
   background: $white_color;
   border: 1px solid $general_line_color;
   border-radius: 3px;
-  padding: 1rem;
+  padding: 1em;
 }
 
 @mixin contents-header {
   text-align: center;
   border-bottom: 1px solid $general_line_color;
-  margin-bottom: 1rem;
+  margin-bottom: 1em;
 }
