--- a/app/frontend/scss/object/project/_article_card.scss
+++ b/app/frontend/scss/object/project/_article_card.scss
@@ -2,24 +2,24 @@
   background: $white_color;
   border: 2px solid $black_color;
   border-radius: 3px;
-  padding: 1rem;
+  padding: 1em;
   // min-width: 450px;
   // max-width: fit-content;
 
   &__body {
     display: block;
     border-bottom: 2px solid $black_color;
-    margin-bottom: .5rem;
+    margin-bottom: .5em;
     text-align: left;
   }
 
   &__overview {
     color: $supplement_color;
-    font-size: .8rem;
+    font-size: .8em;
   }
 
   &__title {
-    font-size: 1.6rem;
+    font-size: 1.6em;
     font-weight: 700;
   }
 
@@ -36,8 +36,8 @@
   }
 
   &__tag-item {
-    font-size: .8rem;
-    margin-bottom: .5rem;
+    font-size: .8em;
+    margin-bottom: .5em;
 
     &:not(:last-child) {
       margin-right: 1em;
@@ -46,16 +46,16 @@
 
   &__reaction {
     display: flex;
-    margin-bottom: .5rem;
+    margin-bottom: .5em;
   }
 
   &__favorite {
-    font-size: .8rem;
-    margin-right: .5rem;
+    font-size: .8em;
+    margin-right: .5em;
   }
 
   &__comment {
-    font-size: .8rem;
+    font-size: .8em;
   }
 
   &__footer {
@@ -69,7 +69,7 @@
   }
 
   &__user-name {
-    font-size: 1.2rem;
+    font-size: 1.2em;
     font-weight: 700;
   }
 }
