--- a/app/frontend/scss/object/project/_article_item.scss
+++ b/app/frontend/scss/object/project/_article_item.scss
@@ -10,12 +10,12 @@
   &__thumbnail {
     flex: 1;
     width: 30%;
-    margin-right: 1rem;
+    margin-right: 1em;
   }
 
   &__body {
     flex: 3;
-    margin-bottom: 1rem;
+    margin-bottom: 1em;
   }
 
   &__overview {
@@ -23,7 +23,7 @@
   }
 
   &__title {
-    font-size: 2.4rem;
+    font-size: 2.4em;
     font-weight: 700;
   }
 
@@ -33,11 +33,11 @@
   }
 
   &__tag-item {
-    font-size: .8rem;
-    margin-bottom: 1rem;
+    font-size: .8em;
+    margin-bottom: 1em;
 
     &:not(:last-child) {
-      margin-right: 1rem;
+      margin-right: 1em;
     }
   }
 
@@ -53,11 +53,11 @@
   }
 
   &__user-photo {
-    margin-right: 1rem;
+    margin-right: 1em;
   }
 
   &__user-name {
-    font-size: 1.6rem;
+    font-size: 1.6em;
     color: $black_color;
   }
 
@@ -67,7 +67,7 @@
   }
 
   &__favorite {
-    margin-right: 1rem;
+    margin-right: 1em;
   }
 
   &__comment {}
