--- a/app/frontend/scss/object/project/_card_contents.scss
+++ b/app/frontend/scss/object/project/_card_contents.scss
@@ -9,7 +9,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-bottom: 1rem;
+    margin-bottom: 1em;
   }
 
   &__list-item {
