--- a/app/frontend/scss/object/project/_header.scss
+++ b/app/frontend/scss/object/project/_header.scss
@@ -18,9 +18,9 @@
   }
 
   &__logo {
-    font-size: 2rem;
+    font-size: 2em;
     font-weight: 700;
-    margin-right: 1rem;
+    margin-right: 1em;
     color: $white_color;
 
     &:hover {
@@ -40,7 +40,7 @@
 
   &__list-item {
     &:not(:last-child) {
-      margin-right: 1rem;
+      margin-right: 1em;
     }
   }
 
@@ -63,15 +63,15 @@
     background: white;
     right: 10px;
     display: none;
-    padding: 1rem;
+    padding: 1em;
     margin-bottom: 0;
   }
 
   &__dropdown-item {
-    padding: 0.3rem;
+    padding: 0.3em;
 
     &:not(:last-child) {
-      margin-bottom: 1rem;
+      margin-bottom: 1em;
       border-bottom: 1px solid $general_line_color;
     }
   }
