--- a/app/frontend/scss/object/utility/_float.scss
+++ b/app/frontend/scss/object/utility/_float.scss
@@ -5,6 +5,6 @@
   &:hover {
     transform: translateY(-2px);
     // box-shadow: 2px 2px 4px $float_shadow_color;
-    box-shadow: 0 0.5rem 1rem $float_shadow_color;
+    box-shadow: 0 0.5em 1em $float_shadow_color;
   }
 }
