--- a/app/frontend/scss/object/component/_badge.scss
+++ b/app/frontend/scss/object/component/_badge.scss
@@ -19,7 +19,7 @@
     &::before {
       font-family: "Font Awesome 5 Free";
       font-weight: 900;
-      font-size: .1em;
+      font-size: .1rem;
       content: "\f02b";
       padding-right: .2em;
     }
@@ -29,16 +29,16 @@
       content: "";
       top: 0;
       left: 100%;
-      border-top: .83em solid transparent;
-      border-bottom: .83em solid transparent;
+      border-top: 1em solid transparent;
+      border-bottom: 1em solid transparent;
       border-left: .5em solid $sub_highlight_color;
     }
   }
 
   &--favorite {
-    background: $white_color;
-    border: 1px solid black;
-    border-radius: 0px;
+    background: transparent;
+    border: 2px solid $main_color;
+    border-radius: 10px;
     color: $black_color;
 
     &::before {
@@ -51,9 +51,9 @@
   }
 
   &--comment {
-    background: $white_color;
-    border: 1px solid black;
-    border-radius: 0px;
+    background: transparent;
+    border: 2px solid $primary_color;
+    border-radius: 10px;
     color: $black_color;
 
     &::before {
