--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -21,4 +21,4 @@
     .p-session-form-contents__form-input
       = f.check_box :accept, class: ''
       = f.label :accept, '利用規約に同意する', class: ''
-    button.p-session-form-contents__form-input.c-btn.c-btn--wide type='submit' 新規登録
+    button.p-session-form-contents__form-input.c-hand-write-btn.c-hand-write-btn--wide type='submit' 新規登録
