--- a/app/frontend/scss/foundation/mixin/_contents_box.scss
+++ b/app/frontend/scss/foundation/mixin/_contents_box.scss
@@ -1,4 +1,6 @@
 @mixin contents-box {
+  position: relative;
+  z-index: 0;
   background: $white_color;
   border: 1px solid $general_line_color;
   border-radius: 3px;
