--- a/app/frontend/scss/object/component/_hand_write_button.scss
+++ b/app/frontend/scss/object/component/_hand_write_button.scss
@@ -4,14 +4,14 @@
   background: transparent;
   color: white;
   border: 2px solid $black_color;
-  border-radius: 3em .5em 2em .5em/.4em 2em .5em 3em;
+  border-radius: 3em 0.5em 2em 0.5em/0.4em 2em 0.5em 3em;
   @include hand-write-btn-color-extension($main_color);
 
   &:hover {
     color: $white_color;
 
     &::before {
-      opacity: 0;
+      box-shadow: none;
       transform: translate(-2px, -2px);
     }
   }
@@ -21,16 +21,15 @@
     content: "";
     width: 100%;
     height: 100%;
-    top: .2em;
-    left: .2em;
-    opacity: 1;
+    top: 0.2em;
+    left: 0.2em;
     z-index: -1;
-    transition-duration: .2s;
+    border-radius: 3em 0.5em 2em 0.5em/0.4em 2em 0.5em 3em;
+    transition-duration: 0.2s;
     transition-timing-function: ease-out;
   }
 
-  @each $key,
-  $color in $custom_colors {
+  @each $key, $color in $custom_colors {
     &--#{$key} {
       @include hand-write-btn-color-extension($color);
     }
