--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -60,6 +60,7 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 
 @import "./object/project/article_card";
 @import "./object/project/article_item";
+@import "./object/project/comment_form";
 @import "./object/project/comment_item";
 @import "./object/project/footer";
 @import "./object/project/header";
