--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -69,6 +69,7 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 /*
 contents
 ================================*/
+@import "./object/project/article_contents";
 @import "./object/project/card_contents";
 @import "./object/project/session_form_contents";
 @import "./object/project/list_contents";
