--- a/app/frontend/scss/foundation/_reset.scss
+++ b/app/frontend/scss/foundation/_reset.scss
@@ -22,3 +22,10 @@ ol {
 .swal2-popup {
   font-size: 1.6rem !important;
 }
+
+.trix-content {
+  font-size: 1.6rem;
+  line-height: 1.4;
+  margin: 0;
+  padding: 0;
+}
