--- a/app/frontend/scss/object/component/_hand_write_button.scss
+++ b/app/frontend/scss/object/component/_hand_write_button.scss
@@ -1,10 +1,9 @@
 .c-hand-write-btn {
   @include block-btn();
+  @include hand-write-border();
   position: relative;
   background: transparent;
   color: white;
-  border: 2px solid $black_color;
-  border-radius: 3em 0.5em 2em 0.5em/0.4em 2em 0.5em 3em;
   @include hand-write-btn-color-extension($main_color);
 
   &:hover {
@@ -17,6 +16,8 @@
   }
 
   &::before {
+    @include hand-write-border();
+    border: none;
     position: absolute;
     content: "";
     width: 100%;
@@ -24,12 +25,12 @@
     top: 0.2em;
     left: 0.2em;
     z-index: -1;
-    border-radius: 3em 0.5em 2em 0.5em/0.4em 2em 0.5em 3em;
     transition-duration: 0.2s;
     transition-timing-function: ease-out;
   }
 
-  @each $key, $color in $custom_colors {
+  @each $key,
+  $color in $custom_colors {
     &--#{$key} {
       @include hand-write-btn-color-extension($color);
     }
