--- a/app/frontend/scss/object/project/_sticky_menu.scss
+++ b/app/frontend/scss/object/project/_sticky_menu.scss
@@ -4,6 +4,10 @@
   margin: 0 auto;
   text-align: center;
 
+  &__item {
+    margin-bottom: .5em;
+  }
+
   &__btn-counter {
     color: $supplement_color;
   }
