--- a/app/views/layouts/article_show.html.slim
+++ b/app/views/layouts/article_show.html.slim
@@ -1,15 +1,12 @@
 doctype html
 html lang = 'ja'
   = render partial: 'shared/head'
-  body.bgcolor-bg
+  body
     = render partial: 'shared/header'
-    #app.container.container-width-custom.py-4
-      / = render partial: 'shared/flash'
-      .row
-        .col-md-1
-          = yield(:items)
-        main.col-md-11
-          = yield
+    #container.l-container
+      aside.l-sidebar--left.u-flex-size-1 = yield(:items)
+      main.l-main.u-flex-size-6.u-mr3 = yield
+      aside.l-sidebar--right.u-flex-size-2 = yield(:side_menu)
     = render partial: 'shared/footer'
     - if Rails.env.development?
       = debug(params)
