--- a/app/views/shared/parts/_user_profile.html.slim
+++ b/app/views/shared/parts/_user_profile.html.slim
@@ -1,16 +1,11 @@
-.card.mb-4
-  .card-body.text-left
-    = set_user_link user, size: 50, class_name: 'card-title'
-  .card-group
-    .card.text-center
-      .card-body
-        p フォロー
-        p 30
-    .card.text-center
-      .card-body
-        p フォロワー
-        p 30
-    .card.text-center
-      .card-body
-        p いいね
-        p 30
+.p-user-profile-contents
+  .p-user-profile-contents__photo
+    = user_photo user, size: 200, class_name: 'c-user-photo'
+  .p-user-profile-contents__header
+    - if user.nick_name.present?
+      h3.p-user-profile-contents__full-name = user.nick_name
+    h4.p-user-profile-contents__name @#{user.name}
+    - if logged_in? && user != current_user
+      .p-user-profile-contents__follow-btn
+        follow-button　:user-id='#{user.id}' :is-followed='#{current_user.already_follow?(user)}'
+  = simple_format(h(user.introduction), class: 'p-user-profile-contents__introduction')
