remove 不必要なscssファイルの削除
_custom.button.scss削除で一部ボタンの色が透明になっている

--- a/app/frontend/scss/_custom.scss
+++ b/app/frontend/scss/_custom.scss
@@ -36,9 +36,9 @@ $max-width-size: 1200px;
 //   background: $background_color;
 // }
 
-.bgcolor-header {
-  background: $header_color;
-}
+// .bgcolor-header {
+//   background: $header_color;
+// }
 
 // .bgcolor-footer {
 //   background: $footer_color;
