--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -73,6 +73,7 @@ mixin
 /*
 contents
 ================================*/
+@import "./object/project/account_activation_contents";
 @import "./object/project/article_contents";
 @import "./object/project/card_contents";
 @import "./object/project/session_form_contents";
