--- a/app/views/account_activations/index.html.slim
+++ b/app/views/account_activations/index.html.slim
@@ -1,21 +1,16 @@
 = content_for(:title, '仮登録の完了')
 
-.row
-  .col-md-6.offset-3
-    .card
-      .card-body
-        h2.card-title.text-main 仮登録が完了しました！
-        .card-text
-          p 受け取ったメールから本登録を完了してください！
-          h2.text-center
-            i.far.fa-envelope.fa-fw.fa-2x
-            span.text-main = current_user.email
-          p メール本文に記載されているURLをクリックして会員登録を完了しましょう！
-      .card-footer
-        p 24時間を過ぎた場合、最初から登録をやり直して頂く必要がございます。
-        p
-          = link_to '詳しくはこちらをご覧ください', '#'
-        p
-          | メールが届いていない場合は
-          = link_to 'こちら', '#'
-          | からメールを再送できます。
+.p-account-activation-contents
+  .p-account-activation-contents__header
+    h1.u-text-main 仮登録が完了しました！
+    p 受け取ったメールから本登録を完了してください！
+  .p-account-activation-contents__body
+    h2.p-account-activation-contents__email = current_user.email
+    p.p-account-activation-contents__text メール本文に記載されているURLをクリックして会員登録を完了しましょう！
+    .p-account-activation-contents__info
+      .p-account-activation-contents__help
+        p 24時間を過ぎた場合、最初から登録をやり直して頂く必要があります。
+        p 詳しくは<a href="#" class="c-link">こちら</a>をご覧ください。
+      .p-account-activation-contents__resend
+        p.u-mb1 メールが届いていない場合は、下のリンクからメールを再送できます。
+        = link_to 'メールを再送する', '#', class: 'c-link'
