--- a/app/views/layouts/no_sidebar.html.slim
+++ b/app/views/layouts/no_sidebar.html.slim
@@ -1,13 +1,14 @@
 doctype html
 html lang = 'ja'
   = render partial: 'shared/head'
-  body.bgcolor-bg
-    = render partial: 'shared/header'
-    .container.container-width-custom.py-4
+  body
+    / .container.container-width-custom.py-4
       main.row
         = yield
+    = render partial: 'shared/header'
+    #container.l-container
+      main.l-main.u-flex-size-1 = yield
     = render partial: 'shared/footer'
     - if Rails.env.development?
       = debug(params)
-      = debug(session[:return_to])
     = render partial: 'shared/flash'
