--- a/app/frontend/scss/foundation/mixin/_button.scss
+++ b/app/frontend/scss/foundation/mixin/_button.scss
@@ -37,6 +37,11 @@
   }
 }
 
+@mixin circle-btn-color-extension($color) {
+  background: $color;
+  border: .25em solid $color;
+}
+
 @mixin hand-write-btn-color-extension($color) {
   &:hover {
     background: $color;
