--- a/app/frontend/scss/object/component/_circle_button.scss
+++ b/app/frontend/scss/object/component/_circle_button.scss
@@ -1,16 +1,24 @@
 .c-circle-btn {
-  @include circle-btn();
-  color: white;
-  @include btn-color-extension($main_color);
+  @include circle-btn-color-extension($main_color);
+  display: inline-block;
+  position: relative;
+  color: $white_color;
+  padding: .3em;
+  border-radius: 50%;
+  text-align: center;
+  font-weight: bold;
+  box-shadow: inset 0 2px 0px rgba(255, 255, 255, 0.25),
+    inset 0 -2px 0px rgba(0, 0, 0, 0.18);
+  transition: .2s;
+
+  &:hover {
+    box-shadow: none;
+  }
 
   @each $key,
   $color in $custom_colors {
     &--#{$key} {
-      @include btn-color-extension($color);
+      @include circle-btn-color-extension($color);
     }
-  }
-
-  &--toy {
-    box-shadow: 0 .2em 0px rgba(255, 255, 255, 0.25) inset, 0 -.2em 0px rgba(0, 0, 0, 0.25) inset;
   }
 }
