--- a/app/frontend/scss/object/component/_text_field.scss
+++ b/app/frontend/scss/object/component/_text_field.scss
@@ -2,30 +2,55 @@
   position: relative;
   width: 100%;
 
-  &__input-form {
-    width: 100%;
-    background: white;
-    padding: .3em .3em .3em 3em;
-    border: 2px solid $general_line_color;
-    border-radius: 3px;
-    outline: none;
-    box-sizing: border-box;
-    transition: 0.2s;
-
-    &:focus {
-      border: 2px solid $primary_color;
-
-      +.c-text-field__icon {
-        color: $primary_color;
-      }
-    }
-  }
-
-  &__icon {
+  &::before {
     position: absolute;
     top: .4em;
     left: .8em;
+    font-family: "Font Awesome 5 Free";
+    content: "";
     transition: 0.2s;
     color: $supplement_color;
+  }
+
+  &__input {
+    width: 100%;
+    background: $white_color;
+    padding: .3em .3em .3em 2.5em;
+    border: 2px solid $general_line_color;
+    border-radius: 3px;
+    outline: none;
+    transition: 0.2s;
+
+    &:focus {
+      border-color: $primary_color;
+    }
+  }
+
+  &--user {
+    &::before {
+      font-weight: 900;
+      content: "\f007";
+    }
+  }
+
+  &--search {
+    &::before {
+      font-weight: 900;
+      content: "\f002";
+    }
+  }
+
+  &--email {
+    &::before {
+      font-weight: 400;
+      content: "\f0e0";
+    }
+  }
+
+  &--password {
+    &::before {
+      font-weight: 900;
+      content: "\f13e";
+    }
   }
 }
