--- a/app/frontend/scss/object/project/contents/_form_contents.scss
+++ b/app/frontend/scss/object/project/contents/_form_contents.scss
@@ -5,8 +5,18 @@
     @include contents-header();
   }
 
-  &__form {
+  &__item {
     padding: 1em;
+
+    &:not(:last-child) {
+      border-bottom: 1px solid $general_line_color;
+    }
+  }
+
+  &__form {
+    &:not(:last-child) {
+      border-bottom: 1px solid $general_line_color;
+    }
   }
 
   &__input {
