--- a/app/views/settings/account/index.html.slim
+++ b/app/views/settings/account/index.html.slim
@@ -1,29 +1,28 @@
-.card
-  .card-body
-    h1.card-title.text-center アカウント設定
-    = render partial: 'shared/error_messages', locals: { model: current_user }
-    .mb-4
-      h4 メールアドレスの変更
-      p.text-main メールアドレス変更後は仮登録の状態に戻ります。変更後は送られてきたメールから再度本登録を行ってください。
-      = form_with model: current_user, scope: :account, url: settings_account_path(current_user), method: :patch, local: true do |f|
-        = f.hidden_field :id
-        .form-group
-          = f.label :email, class: 'form-label'
-          = f.email_field :email, class: 'form-control', placeholder: 'メールアドレス'
-        - if current_user.temporary?
-          p: small.text-muted
-            | 本登録が完了していません。本登録用メールを送信するには
-            = link_to 'こちらをクリックしてください', '#'
-        = f.submit '変更する', class: 'btn btn-main'
-      hr
-
-    #remember-form.mb-4
-      h4 永続ログインの設定
-      p 永続ログインを設定すると、次回から自動でログインされます。
-      remember-button :is-remembered='#{cookies.has_key? :remember}'
-      hr
-
-    .mb-4
-      h4 アカウントの削除
-      p: strong アカウントを削除すると二度と元に戻せません。ご注意ください。
-      = link_to 'アカウント削除', settings_quit_index_path, class: 'btn btn-danger'
+.p-form-contents
+  .p-form-contents__header: h1 アカウント設定
+  = form_with model: current_user, scope: :account, url: settings_account_path(current_user), method: :patch, local: true, class: 'p-form-contents__form' do |f|
+    .p-form-contents__input
+      = f.label :email, class: 'p-form-contents__input-label u-text-bold'
+        i.far.fa-envelope.fa-fw
+        | 新しいメールアドレスの設定
+      .p-form-contents__input-field.c-text-field.c-text-field--email
+        = f.email_field :email, placeholder: '新しいメールアドレス', class: 'c-text-field__input'
+      p.p-form-contents__input-note メールアドレス変更後は仮登録の状態に戻ります。変更後は送られてきたメールから再度本登録を行ってください。
+      - if current_user.temporary?
+        small.u-text-sub-highlight
+          | 本登録が完了していません。本登録用メールから本登録を行ってください。
+          br/
+          | 本登録用メールを再送する場合は#{link_to 'こちらをクリックしてください', '#'}
+    .p-form-contents__submit: button.c-hand-write-btn 変更する
+  .p-form-contents__item
+    h3.u-text-bold
+      i.fas.fa-sign-in-alt.fa-fw
+      | 永続ログインの設定
+    p.u-mb3 永続ログインを設定すると、次回から自動でログインされます。
+    remember-button :is-remembered='#{cookies.has_key? :remember}'
+  .p-form-contents__item
+    h3.text-bold
+      i.fas.fa-trash-alt
+      | 退会
+    p.u-mb3: strong 退会すると二度と元に戻せません。ご注意ください。
+    = link_to '退会する', settings_quit_index_path, class: 'c-outline-btn c-outline-btn--danger'
