--- a/app/frontend/scss/foundation/mixin/_contents_box.scss
+++ b/app/frontend/scss/foundation/mixin/_contents_box.scss
@@ -12,4 +12,8 @@
   border-bottom: 1px solid $general_line_color;
   margin-bottom: 1em;
   padding: 1em 0;
+
+  &>h1 {
+    font-weight: 700;
+  }
 }
