--- a/app/frontend/scss/foundation/_variables.scss
+++ b/app/frontend/scss/foundation/_variables.scss
@@ -3,6 +3,7 @@
 ================================*/
 $global_page_width: 1200px;
 
+
 /*===============================
 	カラー
 ================================*/
@@ -50,11 +51,11 @@ $float_shadow_color: rgba(0, 0, 0, 0.15);
 ================================*/
 
 $spacers: (0: 0,
-  1: .25em,
-  2: .5em,
-  3: 1em,
-  4: 1.5em,
-  5: 3em);
+  1: 1.6rem * .25,
+  2: 1.6rem * .5,
+  3: 1.6rem,
+  4: 1.6rem * 1.5,
+  5: 1.6rem * 3);
 
 /*===============================
 	flexレイアウト用変数
@@ -67,3 +68,9 @@ $flex-size-list: (dot-4: 0.4,
   4: 4,
   5: 5,
   6: 6);
+
+/*===============================
+  checkbox用変数
+================================*/
+
+$check-box-size: 1.6rem * 1.5
